[gd_scene load_steps=19 format=3 uid="uid://djm0doj1v10mh"]

[ext_resource type="Script" path="res://Scripts/big_enemy.gd" id="1_gb2o5"]
[ext_resource type="Texture2D" uid="uid://cu7n0fo8hynoj" path="res://Texture/shadow.png" id="2_kdsek"]
[ext_resource type="Shader" uid="uid://wj8slnoovomr" path="res://Shaders/hit_flash.tres" id="2_lv3ly"]
[ext_resource type="Texture2D" uid="uid://ctu2ntmt3xalv" path="res://Texture/Golem/Golem_1_walk.png" id="3_imn3h"]
[ext_resource type="Texture2D" uid="uid://jjqcpr1ri8ce" path="res://Texture/Golem/Golem_1_die.png" id="4_cmnff"]
[ext_resource type="PackedScene" uid="uid://bdum5bui01qx5" path="res://Scenes/hurt_box.tscn" id="5_w3j3y"]
[ext_resource type="PackedScene" uid="uid://c1mwwjkhct6iq" path="res://Scenes/hit_box.tscn" id="6_o2w6a"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bxtta"]
resource_local_to_scene = true
shader = ExtResource("2_lv3ly")
shader_parameter/enable = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_olg1w"]
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_imn3h")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_dd0gx"]
resource_name = "death"
length = 1.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_cmnff")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 12]
}

[sub_resource type="Animation" id="Animation_a4qjx"]
resource_name = "walking"
length = 2.0
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_imn3h")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t70hr"]
_data = {
"RESET": SubResource("Animation_olg1w"),
"death": SubResource("Animation_dd0gx"),
"walking": SubResource("Animation_a4qjx")
}

[sub_resource type="Animation" id="Animation_amrhg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/enable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_32sbq"]
resource_name = "hit_flash"
length = 0.0667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/enable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_paktb"]
_data = {
"RESET": SubResource("Animation_amrhg"),
"hit_flash": SubResource("Animation_32sbq")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mtuas"]
radius = 8.5
height = 26.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vm6da"]
size = Vector2(20, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ixbx"]
size = Vector2(22, 29)

[node name="big_enemy" type="CharacterBody2D" groups=["Enemy"]]
z_index = 3
collision_layer = 4
collision_mask = 0
script = ExtResource("1_gb2o5")

[node name="shadow" type="Sprite2D" parent="."]
position = Vector2(0.0750012, 10)
scale = Vector2(0.352532, 0.3)
texture = ExtResource("2_kdsek")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_bxtta")
position = Vector2(0, -22)
texture = ExtResource("3_imn3h")
hframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_t70hr")
}
autoplay = "walking"

[node name="HitFlash" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_paktb")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_mtuas")

[node name="HurtBox" parent="." instance=ExtResource("5_w3j3y")]
collision_layer = 4
collision_mask = 4
HurtBoxType = 1

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, -4.5)
shape = SubResource("RectangleShape2D_vm6da")

[node name="HitBox" parent="." instance=ExtResource("6_o2w6a")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, -4.5)
shape = SubResource("RectangleShape2D_2ixbx")

[connection signal="animation_finished" from="Sprite2D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]

[editable path="HurtBox"]
[editable path="HitBox"]
